--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -43,7 +43,7 @@ figure{
 .flash{
   animation-name: flash;
   -webkit-animation-duration: 0.5s;
-            animation-duration: 0.5s;
+  animation-duration: 0.5s;
 }
 
 figure:nth-child(1) { background-image: linear-gradient(to top, rgba(0,0,0,0), rgba(255,255,255,0.3) ), url("../images/home/background_desktop_1.jpg"); }
@@ -162,6 +162,7 @@ padding-top: 3vh;
  @media screen and (max-width: 900px){
   .openingContent{
     letter-spacing: 1.5;
+    font-size: 16px;
     text-align: center;
   }
   .open1{
